[project]
name = "qbd"
version = "0.1.0"
authors = [
  { name="L. Heino"},
]
description = "Creates data cubes from FITS-file image data."
readme = "README.md"
requires-python = ">3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "astropy>=6.1.7",
    "click>=8.1.8",
    "numpy>=2.2.1",
    "rich>=13.9.4",
]

[project.urls]
Homepage = "https://qbd.lennartheino.de"
Issues = "https://github.com/idia-astro/qbd/issues"

[tool.uv.workspace]
members = ["./"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
qbd = "qbd:main"
